Version 0.5

2005-05-08:
 
	* changed the auth_md5.c - code to the openbsd-version (public domain)
	* added auth_sha1.c - also from openbsd-codebase, also public domain
	* added two stand-alone programs to calculate md5/sha1 hashs:
		+ src/asha1 - reads from stdin, EOF ends
		+ src/amd5 - reads from stdin, EOF ends
		(just in case your system DOESNT have md5/md5sum or sha1/sha1sum
	* minor changes to aklock.c

2005-05-07:

	* big restructering + feature enhancements
		+ added auth_<method>.c, each basic auth-method has now
		  its own implementation-file
		+ added -auth - flag:
			- list      - lists all available methods
			- none      - no auth, like -nolock
			- passwd    - standard login, possible shadowsupport
			- pam       - use pam for authentification
			- md5:hash  - provide a md5-hash for authentification
	* support for 'shadow'-passwords is part of the passwd authmodule

2005-05-06:

	* added -nolock
	* discard all pending xevents after wrong password to prevent
	  strange folks for blocking the current session by filling
	  the eventqueue with wrong authentification and thus block
	  the real authentification (kind of denial of service :)
	* added suuport to load / have different cursor-shapes
		+ -cursor theme|<format>:<filename>
	* added support for xcursor
	* restructuring
		+ contrib/ -> for stuff coming from the "outside"
		  contrib/xcursor-watch -> xcursor taken from 5532-BlueGlass-XCursors-3D-0.4.tar.bz2
		+ src/

2005-05-02:

	* restructuring

2005-04-30:

	* added -cursor <theme>
	* cursor-bitmap-themes are stored in bitmaps/
	* started svn-usage

Version 0.1

2005-04-28: 
	* first release (0.1)
	* added pam-support (works ok with linux + freebsd so far)
	* use scons for building the stuff

# vim:ft=changelog