@@ -1,14 +1,14 @@
-.TH AKLOCK 1
+.TH ALOCK 1
 .SH NAME
-aklock \- Lock X display until password supplied
+alock \- Lock X display until password supplied
 .SH SYNOPSIS
-.B aklock
+.B alock
 .SH DESCRIPTION
-.B aklock
+.B alock
 locks the X server till the user enters their password at the keyboard.
 
 While
-.B aklock
+.B alock
 is running, the mouse and keyboard are grabbed and the mouse cursor
 becomes a padlock.  Output displayed by X programs, and windows put up
 by new X clients, continue to be visible, and any new output is
