@@ -18,7 +18,7 @@
 /* ---------------------------------------------------------------- *\
   includes
 \* ---------------------------------------------------------------- */
-#include "aklock.h"
+#include "alock.h"
 
 /* ---------------------------------------------------------------- *\
 \* ---------------------------------------------------------------- */
@@ -35,7 +35,7 @@ static int auth(const char* passwd) {
     return 1;
 }
 
-struct akAuth aklock_auth_none = {
+struct aAuth alock_auth_none = {
     "none",
     init,
     deinit,
