@@ -19,7 +19,7 @@
   includes
 \* ---------------------------------------------------------------- */
 #include <X11/Xlib.h>
-#include "aklock.h"
+#include "alock.h"
 
 /* ---------------------------------------------------------------- *\
 \* ---------------------------------------------------------------- */
@@ -35,7 +35,7 @@
 /* ---------------------------------------------------------------- *\
 \* ---------------------------------------------------------------- */
 
-struct akCursor ak_cursors[] = {
+struct aCursor alock_cursors[] = {
 
     { "mini", 
       mini_width, mini_height, mini_x_hot, mini_y_hot, 
